docs: proxy /openapi.json via redirects only; remove prebuild & static schema; clean build

--- a/static/redoc.html
+++ b/static/redoc.html
@@ -10,7 +10,7 @@
   <div id="redoc"></div>
   <!-- 绝对地址 + 版本参数，避免旧缓存 -->
   <script>
-    window.__SPEC_URL__ = "https://docs.useportpulse.com/openapi.json?v=20250915";
+    window.__SPEC_URL__ = "https://api.useportpulse.com/openapi.json";
   </script>
   <script src="https://cdn.redoc.ly/redoc/v2.5.0/bundles/redoc.standalone.js"></script>
   <script>
